test/errors/syntax_error/zs/unexpected_eof_in_struct_definition_error.zs
package unexpected_eof_in_struct_definition_error;

struct UnexpectedEofInStruct
{
    int32 value;
